Upgrade to JGroups 5.1.2.Final (https://github.com/belaban/jgroups-raft/issues/83)